Chrome bug resolved by -webkit-backface-visibility: hidden

--- a/resources/assets/sass/modules/_grid.scss
+++ b/resources/assets/sass/modules/_grid.scss
@@ -22,17 +22,21 @@
         &:hover{
             .grid-gradient{
                 transform: translateY(-100%);
+                -webkit-transform: translateY(-100%);
             }
 
             .grid-desc{
                 transform: translateY(0%);
+                -webkit-transform: translateY(0%);
             }
         }
 
         .grid-gradient{
             position:absolute;
             transition:all .5s;
+            -webkit-backface-visibility: hidden;
             transform: translateY(-200%);
+            -webkit-transform: translateY(-200%);
             height:100%;
             background: rgba(250, 250, 250, .5);
             width:100%;
@@ -60,6 +64,8 @@
         opacity:0;
         transition: all .5s;
         height:100%;
+        -webkit-backface-visibility: hidden;
+        -webkit-transform: translateY(100%);
         transform: translateY(100%);
 
         .grid-desc-title{
